[metadata]
name = RobsToolbox2
version = 1.0.6
author = Rob Egli
author_email = regli@hy-vee.com
description = General toolbox
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.hy-vee.cloud/regli/Robs_Toolbox2
project_urls =
    Bug Tracker = https://github.hy-vee.cloud/regli/Robs_Toolbox2/isssues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    logzero
    PyYAML
    requests

[options.packages.find]
where = src